# ctf-gameserver

./: .devcontainer.json  .gitignore  AGENTS.md  LICENSE.txt  MANIFEST.in  Makefile  README-original.md  README.md  bandit.ini  dev_requirements.txt  mkdocs.yml  pyproject.toml  run_tests.py  setup.py  tox.ini
.circleci/: config.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
checker/: checker.conf  checkermaster  checkermaster.conf  checkermaster@.service  checkerslave  ctf-checkermaster  ctf-checkermaster@.service  ctf-checkerslave  ctf-logviewer  ctf-testrunner  examplechecker.conf  setup.py  testrunner  testrunner.py
checker/checker/: __init__.py  abstract.py  contest.py  local.py
checker/doc/: README.txt
checker/examples/: dummy.py  dummyrunner.py
conf/checker/: checkermaster.conf  checkermaster.env  ctf-checkermaster@.service
conf/controller/: controller.conf  controller.env  ctf-controller.service  ctf-flagid.service  ctf-flagid.timer  ctf-scoring.service  (+2 more)
controller/: controller  controller.service  controller.timer  ctf-controller  ctf-controller.service  ctf-flagid  ctf-scoring  ctf-scoring.service  flagid.conf  scoring.conf  scoring.sql
debian/: .gitignore  changelog  clean  control  copyright  coyright  ctf-gameserver-checker.dirs  ctf-gameserver-checker.install  ctf-gameserver-controller.install  ctf-gameserver-doc.docs  ctf-gameserver-submission.install  ctf-gameserver-web.install  ctf-gameserver-web.links  install  postinst  python3-ctf-gameserver.install  rules
doc/: Makefile  checker.adoc  flag.adoc
docs/: architecture.md  index.md  installation.md  observability.md  submission.md
lib/: Keccak.py  flag.py  test_lib.py
rust/: Cargo.toml
rust/examples/: trivialchecker.rs
rust/src/: context.rs  error.rs  flag.rs  ipc.rs  lib.rs  local.rs  log.rs
rust/tests/: trivial.rs
src/: Makefile  pylintrc
submission/: ctf-submission  ctf-submission@.service  flagsubmission  submission.conf  submission.service  submission@.service  test_submission.py
terraform/: terraform-apply.sh  terraform-destroy.sh
tests/: ctf_gameserver  test_lib.py  test_submission.py
web/: Makefile  dev_manage.py  manage.py  prod_manage.py  pylintrc  requirements.txt
(+288 files in other folders)
