[package]
name = "checkerlib"
version = "0.1.0"
authors = ["Christoph Egger <egger@cs.fau.de>"]
edition = "2018"
license = "ISC"
homepage = "https://ctf-gameserver.org/"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
log = { version = "0.4", features = ["std"] }
env_logger = "0.8"